@@ -1,3 +1,8 @@
+2007-10-24  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* tests/check/gnetcheck.c:
+	  Don't leak function string array when using GNET_CHECKS.
+
 2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
